force-app/main/default/objects/Log__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <label>File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>