force-app/main/default/objects/Log__c/fields/FormFactor__c.field-meta.xml
<CustomField>
    <fullName>FormFactor__c</fullName>
    <label>FormFactor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large</fullName>
                <label>Desktop</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Tablet</label>
            </value>
            <value>
                <fullName>Small</fullName>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>