force-app/main/default/objects/Log__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>