force-app/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex class</fullName>
            </value>
            <value>
                <fullName>Lightning component</fullName>
            </value>
            <value>
                <fullName>Webservice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>