force-app/main/default/objects/Log__c/recordTypes/Info.recordType-meta.xml
<RecordType>
    <fullName>Info</fullName>
    <active>true</active>
    <label>Info</label>
</RecordType>