force-app/main/default/objects/Log__c/listViews/AllApiResponses.listView-meta.xml
<ListView>
    <fullName>AllApiResponses</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Method__c</columns>
    <columns>Parameters__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Info</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Webservice</value>
    </filters>
    <label>All API Responses</label>
</ListView>