force-app/main/default/objects/Log__c/listViews/AllErrors.listView-meta.xml
<ListView>
    <fullName>AllErrors</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>File__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Method__c</columns>
    <columns>Parameters__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Error</value>
    </filters>
    <label>All errors</label>
</ListView>